SEGV in mongod if tracing profiler enabled without adding samples

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: 8.0.1
    • Component/s: None
    • None
    • Server Programmability
    • Fully Compatible
    • ALL
    • Programmability 2024-10-14, Programmability 2024-10-28
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If the tracing profiler compile option is enabled, but no MONGO_PROFILER_SPAN_ENTER() trace points are added to the code, mongod will consistently crash with a segfault. This appears to be due to the metrics generation code assuming _callMetrics.nodeMetrics() is non-empty, and always visiting node zero. This may also be an issue if trace points are only placed in obscure code locations that are never visited, but I don't know the implementation well enough to be sure of that.

            Assignee:
            Ronald Steinke (Inactive)
            Reporter:
            Ronald Steinke (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: