SERVER-95631: Don't SEGV in profiler without samples. (#27923)

GitOrigin-RevId: cbde6b5e8cbf6598346e506569310eaad8296491